--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,8 @@
   <div class="jumbotron">
-    <h1 class="title">18K Offer</h1>
-    <p class="slogan">18K Offer 是一个提供18K薪水工作机会的求职网站。
+    <h1 class="title" color:white;>采矿人才网</h1>
+    <p class="slogan">采矿人才网 是一个提供采矿相关工作机会的求职网站。
     <br>
     我们希望藉由这个网站，能让大家找到且应征上高薪且优质的工作。
-    <br>
-     凭借自己的努力和天份也会变 Winner
     </p>
     <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">马上应征</a></p>
   </div>
@@ -14,25 +12,25 @@
       <div class="row">
         <div class="col-sm-4 ">
           <div class="thumbnail">
-            <img src="http://y.photo.qq.com/img?s=VfqbvmFVI&l=y.jpg" alt="search" class = "img-thumbnail">
+            <img src='<%= image_url 'w1.jpg' %>' alt="search" class = "img">
             <div class="caption">
-              <h3>北京朝阳建外SOHO</h3>
+              <h3>爆破专家</h3>
             </div>
           </div>
         </div>
         <div class="col-sm-4 ">
           <div class="thumbnail">
-            <img src="http://y.photo.qq.com/img?s=9yBkCQVj7&l=y.jpg" alt="bid" class = "img-thumbnail">
+            <img src='<%= image_url 'w2.jpg' %>' alt="bid" class = "img">
             <div class="caption">
-              <h3>info@18koffer.com</h3>
+              <h3>测量高手</h3>
             </div>
           </div>
         </div>
         <div class="col-sm-4 ">
           <div class="thumbnail">
-            <img src="http://y.photo.qq.com/img?s=bAQJ8dfF4&l=y.jpg" alt="heart" class = "img-thumbnail">
+            <img src='<%= image_url 'w3.jpg' %>' alt="heart" class = "img">
             <div class="caption">
-              <h3>010-12344321</h3>
+              <h3>机械大师</h3>
             </div>
           </div>
         </div>
