--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,9 +2,28 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header ">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+<!-- 据说下面这行不能去掉?-->
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
             <a class="navbar-brand" href="/">采矿人才网 </a>
         </div>
+        <div class="nav navbar-nav navbar-left">
+        <%= form_tag search_jobs_path , :method => :get  do %>
+        <div class="input-group" id="search-id" >
+          <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="请输入职位信息">
+          <div class="input-group-btn">
+            <button class="btn btn-default" type="submit">
+              <i class="glyphicon glyphicon-search"></i>
+            </button>
+          </div>
 
+        </div>
+        <% end %>
+      </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
