--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,16 +2,12 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header ">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-<!-- 据说下面这行不能去掉?-->
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+
             <a class="navbar-brand" href="/">采矿人才网 </a>
         </div>
+
         <div class="nav navbar-nav navbar-left">
+          <form class="navbar-form navbar-left" role="search">
         <%= form_tag search_jobs_path , :method => :get  do %>
         <div class="input-group" id="search-id" >
           <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="请输入职位信息">
