--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,11 +20,71 @@
  @import "font-awesome";
  @import url(http://fonts.googleapis.com/css?family=Roboto);
 
+//-- navbar --//
+
+ .navbar-default {
+     background-color: #F5F5F5;//背景颜色
+     border-color: #F5F5F5;//边框色
+     margin-bottom: 0;//底部 margin 不撑开距离
+ }
+
+ .navbar-brand > img {
+     display: inline-block;	//图片和链接文字显示在同一行
+     margin-right: 10px; //图片和链接文字拉开一点距离
+     width: 32px; //定制图片宽度
+     height: 32px; //定制图片高度
+ }
+
+ .navbar-default .navbar-brand {
+    color: #757575;//字体颜色
+    padding: 10px 15px;//上下10px,左右15px
+    line-height: 30px;//文字行高
+ }
+
+ .navbar-default .navbar-brand:hover,
+ .navbar-default .navbar-brand:focus {
+   color: #BDBDBD;//鼠标放置在链接上的文字颜色
+   background-color: transparent;//鼠标放置在链接上的背景颜色，这里设为透明
+ }
+
+ .navbar-default .navbar-nav > li > a{
+   color: #757575;
+ }
+
+ .navbar-default .navbar-nav > li > a:hover,
+ .navbar-default .navbar-nav > li > a:focus {
+   color: #BDBDBD;
+   background-color: transparent;
+ }
+ .navbar-default .navbar-nav > .active > a,
+ .navbar-default .navbar-nav > .active > a:hover,
+ .navbar-default .navbar-nav > .active > a:focus {
+   color: #BDBDBD;
+   background-color: transparent;
+ }
+
+ .navbar-default .navbar-nav > .open > a,
+ .navbar-default .navbar-nav > .open > a:focus,
+ .navbar-default .navbar-nav > .open > a:hover {
+     background-color: transparent;
+     color: #BDBDBD;
+ }
+
+ //-- box --//
+
  .jumbotron {
    background-image:url('mine.jpg');
    background-repeat: no-repeat;
    background-size: cover;
-   padding-bottom: 110px;
+   padding-bottom: 110px;//内部的底部边距，这样按钮不会很靠近底部了
+   margin: 0 -15px 20px;//顶部margin为0，因此可以直接接着导航栏；左右margin为负15，因此可以顶到浏览器的边缘（抵消 container-fluid 的 15px 左右padding);底部margin为20，会跟下面的内容撑开距离
+   border-radius: 0;//圆角为0
+ }
+
+ .jumbotron h1, .jumbotron .h1 {
+     text-align: middle;//文字左对齐
+     color: white;	//字体颜色
+     padding: 50px 20px 0;//上50px，左右20px，下0
  }
 
  .title {
@@ -48,6 +108,28 @@
    text-align: center;
    color: white;
  }
+
+ .btn-danger {
+     color: #DD2C00;//字体颜色
+     background-color: #fff;//鼠标放置在btn上的背景颜色
+     border-color: #fff;//鼠标放置在btn上的边框颜色
+ }
+
+ .btn-danger:hover {
+    color: #fff;//字体颜色
+    background-color: #DD2C00;//背景颜色
+    border-color: #DD2C00;//边框颜色
+}
+
+.btn-lg, .btn-group-lg > .btn {
+    padding: 8px 16px;//通过padding来决定btn的大小
+    font-size: 20px;//btn文字大小
+    letter-spacing: 3px;//调整文字间距
+    border-radius: 3px;//btn圆角
+    width: 200px;//这里用指定宽度把btn拉得更长
+}
+
+//-- box2 --//
 
  .caption {
    margin: 30px;
@@ -175,3 +257,14 @@
  .login-help{
    font-size: 12px;
  }
+
+ //---------Footer---------
+
+footer {
+    color: #757575;
+}
+
+footer .footer-below {
+    padding: 15px 0;
+    background-color: #E0E0E0;
+}
