--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -3,10 +3,9 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header ">
 
-            <a class="navbar-brand" href="/">采矿人才网 </a>
+            <a class="navbar-brand" href="/"><img src='<%= image_url 'logo.png' %>'>采矿人才网 </a>
         </div>
 
-        <div class="nav navbar-nav navbar-left">
           <form class="navbar-form navbar-left" role="search">
         <%= form_tag search_jobs_path , :method => :get  do %>
         <div class="input-group" id="search-id" >
@@ -19,7 +18,7 @@
 
         </div>
         <% end %>
-      </div>
+      </from>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
