--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
   <div class="jumbotron">
-    <h1 class="title" color:white;>采矿人才网</h1>
+    <h1 class="title">采矿人才网</h1>
     <p class="slogan">采矿人才网 是一个提供采矿相关工作机会的求职网站。
     <br>
     我们希望藉由这个网站，能让大家找到且应征上高薪且优质的工作。
