added devise pages in views

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -51,12 +51,12 @@
 
 </table> -->
 
-<div class="col-md-6 col-centered">
+<div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-centered">
 
-<div class="panel panel-default">
+<div class="panel panel-primary">
   <div class="panel-heading">
     <h3>
-      求值列表
+      职位列表
       <div class="dropdown clearfix pull-right">
           <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuDivider" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             排序
@@ -83,8 +83,7 @@
     <table class="table table-boldered">
         <thead>
             <tr>
-                <td>
-                    职缺</td>
+                <td>职缺</td>
                 <td>薪资下限</td>
                 <td>薪资上限</td>
                 <td>刊登时间</td>
