update welcome page description

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
     <h1 class="title">采矿人才网</h1>
     <p class="slogan">采矿人才网 是一个提供采矿相关工作机会的求职网站。
     <br>
-    我们希望藉由这个网站，能让大家找到且应征上高薪且优质的工作。
+    我们希望藉由这个网站，能让大家找到且应征上优质的工作。
     </p>
     <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">马上应征</a></p>
   </div>
